lo rompi pero ya sirve bien el router

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
+    <header><img src="./lib/img/biciheader.jpg"></header>
   <div id="root"></div>
   <script type="module" src="main.js"></script>
 </body>
+<footer><a href="https://en.bikebike.org/" class="pag">bike.bike.org<span id="bici" class="material-icons">directions_bike</span></a></footer>
 </html>
